// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`tap pricing row renders correctly for a single row 1`] = `
<DocumentFragment>
  <div>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for tap $1
      </legend>
      <div
        class="govuk-grid-row govuk-!-width-one-third govuk-!-margin-left-4"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label govuk-!-margin-top-6 "
              for="multi-tap-number-0"
            >
              <span
                class="govuk-label"
              >
                Tap number
              </span>
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label"
              for="multi-tap-price-0"
            >
              <span
                class="govuk-visually-hidden"
              >
                Tap Price - Price $1
              </span>
              <span
                aria-hidden="true"
              >
                Price
              </span>
              <span
                class="govuk-hint"
                id="tap-price-hint-0"
              >
                e.g. 2.99
              </span>
            </label>
          </div>
        </div>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half "
          >
            <label
              class="govuk-label govuk-!-margin-left-6 govuk-!-margin-top-2"
              for="multi-tap-number-0"
            >
              <span
                class="govuk-label"
                id="multi-tap-number-hint-0"
              >
                1
              </span>
               
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="govuk-form-group "
            >
              <div
                class="govuk-currency-input"
              >
                <div
                  class="govuk-currency-input__inner"
                >
                  <span
                    class="govuk-currency-input__inner__unit"
                  >
                    £
                  </span>
                  <div
                    class=""
                  >
                    <input
                      aria-describedby="tap-price-hint-0"
                      class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                      data-non-numeric="true"
                      id="multi-tap-price-0"
                      name="multiTapPriceInput0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`tap pricing row renders correctly for more than one row 1`] = `
<DocumentFragment>
  <div>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for tap $1
      </legend>
      <div
        class="govuk-grid-row govuk-!-width-one-third govuk-!-margin-left-4"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label govuk-!-margin-top-6 "
              for="multi-tap-number-0"
            >
              <span
                class="govuk-label"
              >
                Tap number
              </span>
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label"
              for="multi-tap-price-0"
            >
              <span
                class="govuk-visually-hidden"
              >
                Tap Price - Price $1
              </span>
              <span
                aria-hidden="true"
              >
                Price
              </span>
              <span
                class="govuk-hint"
                id="tap-price-hint-0"
              >
                e.g. 2.99
              </span>
            </label>
          </div>
        </div>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half "
          >
            <label
              class="govuk-label govuk-!-margin-left-6 govuk-!-margin-top-2"
              for="multi-tap-number-0"
            >
              <span
                class="govuk-label"
                id="multi-tap-number-hint-0"
              >
                1
              </span>
               
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="govuk-form-group "
            >
              <div
                class="govuk-currency-input"
              >
                <div
                  class="govuk-currency-input__inner"
                >
                  <span
                    class="govuk-currency-input__inner__unit"
                  >
                    £
                  </span>
                  <div
                    class=""
                  >
                    <input
                      aria-describedby="tap-price-hint-0"
                      class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                      data-non-numeric="true"
                      id="multi-tap-price-0"
                      name="multiTapPriceInput0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for tap $2
      </legend>
      <div
        class="govuk-grid-row govuk-!-width-one-third govuk-!-margin-left-4"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label  "
              for="multi-tap-number-1"
            >
              <span
                class="govuk-label"
              >
                Tap number
              </span>
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label"
              for="multi-tap-price-1"
            >
              <span
                class="govuk-visually-hidden"
              >
                Tap Price - Price $2
              </span>
              <span
                aria-hidden="true"
              >
                Price
              </span>
            </label>
          </div>
        </div>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half "
          >
            <label
              class="govuk-label govuk-!-margin-left-6 govuk-!-margin-top-2"
              for="multi-tap-number-1"
            >
              <span
                class="govuk-label"
                id="multi-tap-number-hint-1"
              >
                2
              </span>
               
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="govuk-form-group "
            >
              <div
                class="govuk-currency-input"
              >
                <div
                  class="govuk-currency-input__inner"
                >
                  <span
                    class="govuk-currency-input__inner__unit"
                  >
                    £
                  </span>
                  <div
                    class=""
                  >
                    <input
                      aria-describedby="tap-price-hint-1"
                      class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                      data-non-numeric="true"
                      id="multi-tap-price-1"
                      name="multiTapPriceInput1"
                      type="text"
                      value="9"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for tap $3
      </legend>
      <div
        class="govuk-grid-row govuk-!-width-one-third govuk-!-margin-left-4"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label  "
              for="multi-tap-number-2"
            >
              <span
                class="govuk-label"
              >
                Tap number
              </span>
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label"
              for="multi-tap-price-2"
            >
              <span
                class="govuk-visually-hidden"
              >
                Tap Price - Price $3
              </span>
              <span
                aria-hidden="true"
              >
                Price
              </span>
            </label>
          </div>
        </div>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half "
          >
            <label
              class="govuk-label govuk-!-margin-left-6 govuk-!-margin-top-2"
              for="multi-tap-number-2"
            >
              <span
                class="govuk-label"
                id="multi-tap-number-hint-2"
              >
                3
              </span>
               
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="govuk-form-group "
            >
              <div
                class="govuk-currency-input"
              >
                <div
                  class="govuk-currency-input__inner"
                >
                  <span
                    class="govuk-currency-input__inner__unit"
                  >
                    £
                  </span>
                  <div
                    class=""
                  >
                    <input
                      aria-describedby="tap-price-hint-2"
                      class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                      data-non-numeric="true"
                      id="multi-tap-price-2"
                      name="multiTapPriceInput2"
                      type="text"
                      value="99"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for tap $4
      </legend>
      <div
        class="govuk-grid-row govuk-!-width-one-third govuk-!-margin-left-4"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label  "
              for="multi-tap-number-3"
            >
              <span
                class="govuk-label"
              >
                Tap number
              </span>
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label"
              for="multi-tap-price-3"
            >
              <span
                class="govuk-visually-hidden"
              >
                Tap Price - Price $4
              </span>
              <span
                aria-hidden="true"
              >
                Price
              </span>
            </label>
          </div>
        </div>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half "
          >
            <label
              class="govuk-label govuk-!-margin-left-6 govuk-!-margin-top-2"
              for="multi-tap-number-3"
            >
              <span
                class="govuk-label"
                id="multi-tap-number-hint-3"
              >
                4
              </span>
               
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="govuk-form-group "
            >
              <div
                class="govuk-currency-input"
              >
                <div
                  class="govuk-currency-input__inner"
                >
                  <span
                    class="govuk-currency-input__inner__unit"
                  >
                    £
                  </span>
                  <div
                    class=""
                  >
                    <input
                      aria-describedby="tap-price-hint-3"
                      class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                      data-non-numeric="true"
                      id="multi-tap-price-3"
                      name="multiTapPriceInput3"
                      type="text"
                      value="999"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for tap $5
      </legend>
      <div
        class="govuk-grid-row govuk-!-width-one-third govuk-!-margin-left-4"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label  "
              for="multi-tap-number-4"
            >
              <span
                class="govuk-label"
              >
                Tap number
              </span>
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label"
              for="multi-tap-price-4"
            >
              <span
                class="govuk-visually-hidden"
              >
                Tap Price - Price $5
              </span>
              <span
                aria-hidden="true"
              >
                Price
              </span>
            </label>
          </div>
        </div>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half "
          >
            <label
              class="govuk-label govuk-!-margin-left-6 govuk-!-margin-top-2"
              for="multi-tap-number-4"
            >
              <span
                class="govuk-label"
                id="multi-tap-number-hint-4"
              >
                5
              </span>
               
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="govuk-form-group "
            >
              <div
                class="govuk-currency-input"
              >
                <div
                  class="govuk-currency-input__inner"
                >
                  <span
                    class="govuk-currency-input__inner__unit"
                  >
                    £
                  </span>
                  <div
                    class=""
                  >
                    <input
                      aria-describedby="tap-price-hint-4"
                      class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input"
                      data-non-numeric="true"
                      id="multi-tap-price-4"
                      name="multiTapPriceInput4"
                      type="text"
                      value="555"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`tap pricing row renders correctly on error 1`] = `
<DocumentFragment>
  <div>
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        Enter details for tap $1
      </legend>
      <div
        class="govuk-grid-row govuk-!-width-one-third govuk-!-margin-left-4"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label govuk-!-margin-top-6 "
              for="multi-tap-number-0"
            >
              <span
                class="govuk-label"
              >
                Tap number
              </span>
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <label
              class="govuk-label"
              for="multi-tap-price-0"
            >
              <span
                class="govuk-visually-hidden"
              >
                Tap Price - Price $1
              </span>
              <span
                aria-hidden="true"
              >
                Price
              </span>
              <span
                class="govuk-hint"
                id="tap-price-hint-0"
              >
                e.g. 2.99
              </span>
            </label>
          </div>
        </div>
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-one-half "
          >
            <label
              class="govuk-label govuk-!-margin-left-6 govuk-!-margin-top-2"
              for="multi-tap-number-0"
            >
              <span
                class="govuk-label"
                id="multi-tap-number-hint-0"
              >
                1
              </span>
               
            </label>
          </div>
          <div
            class="govuk-grid-column-one-half"
          >
            <div
              class="govuk-form-group govuk-form-group--error"
            >
              <div
                class="govuk-currency-input"
              >
                <div
                  class="govuk-currency-input__inner"
                >
                  <span
                    class="govuk-currency-input__inner__unit"
                  >
                    £
                  </span>
                  <div
                    class=""
                  >
                    <input
                      aria-describedby="multi-tap-price-0-error"
                      class="govuk-input govuk-input--width-4 govuk-currency-input__inner__input govuk-input--error"
                      data-non-numeric="true"
                      id="multi-tap-price-0"
                      name="multiTapPriceInput0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;
